gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test21353.d
version https://git-lfs.github.com/spec/v1
oid sha256:d46b4ad46ad7f7902d93815d0c84c80e7f29f783a283a9124fcca44738210c9b
size 956
